feat:change the description the proyect

--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
         <div class="hero-carousel__slide">
           <img src="img/home/hero-slide1.png" alt="" class="img-fluid">
           <a href="#" class="hero-carousel__slideOverlay">
-            <h3>Wireless Headphone</h3>
+            <h3>Zapatillas de deporte Hombre Runnig</h3>
             <p>Accessories Item</p>
           </a>
         </div>
         <div class="hero-carousel__slide">
           <img src="img/home/hero-slide2.png" alt="" class="img-fluid">
           <a href="#" class="hero-carousel__slideOverlay">
-            <h3>Wireless Headphone</h3>
+            <h3>Ratón Gaming Profesional-Sensor óptico </h3>
             <p>Accessories Item</p>
           </a>
         </div>
         <div class="hero-carousel__slide">
           <img src="img/home/hero-slide3.png" alt="" class="img-fluid">
           <a href="#" class="hero-carousel__slideOverlay">
-            <h3>Wireless Headphone</h3>
+            <h3>Paleta de Sombra de Ojos</h3>
             <p>Accessories Item</p>
           </a>
         </div>
@@ -145,9 +145,9 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Accessories</p>
-                <h4 class="card-product__title"><a href="single-product.html">Quartz Belt Watch</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Accesorio Deporte</p>
+                <h4 class="card-product__title"><a href="single-product.html">Smartwatch</a></h4>
+                <p class="card-product__price">16,99€</p>
               </div>
             </div>
           </div>
@@ -162,9 +162,9 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Beauty</p>
-                <h4 class="card-product__title"><a href="single-product.html">Women Freshwash</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Belleza y Salud</p>
+                <h4 class="card-product__title"><a href="single-product.html">Colonia After Shave</a></h4>
+                <p class="card-product__price">4,15€</p>
               </div>
             </div>
           </div>
@@ -179,9 +179,9 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Decor</p>
-                <h4 class="card-product__title"><a href="single-product.html">Room Flash Light</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Bricolage</p>
+                <h4 class="card-product__title"><a href="single-product.html">Pegamento Extrafuerte</a></h4>
+                <p class="card-product__price">2,45€</p>
               </div>
             </div>
           </div>
@@ -196,9 +196,9 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Decor</p>
-                <h4 class="card-product__title"><a href="single-product.html">Room Flash Light</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Alimentación</p>
+                <h4 class="card-product__title"><a href="single-product.html">Galletas Nocilla</a></h4>
+                <p class="card-product__price">2,99€</p>
               </div>
             </div>
           </div>
@@ -213,9 +213,9 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Accessories</p>
-                <h4 class="card-product__title"><a href="single-product.html">Man Office Bag</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Belleza y Salud</p>
+                <h4 class="card-product__title"><a href="single-product.html">Gel Higienizante De Manos</a></h4>
+                <p class="card-product__price">2,18€</p>
               </div>
             </div>
           </div>
@@ -230,9 +230,9 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Kids Toy</p>
-                <h4 class="card-product__title"><a href="single-product.html">Charging Car</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Hogar</p>
+                <h4 class="card-product__title"><a href="single-product.html">Servilletas de Papel</a></h4>
+                <p class="card-product__price">0,65€</p>
               </div>
             </div>
           </div>
@@ -247,27 +247,27 @@
                 </ul>
               </div>
               <div class="card-body">
-                <p>Accessories</p>
-                <h4 class="card-product__title"><a href="single-product.html">Blutooth Speaker</a></h4>
-                <p class="card-product__price">$150.00</p>
+                <p>Hogar</p>
+                <h4 class="card-product__title"><a href="single-product.html">Spray Cleaner</a></h4>
+                <p class="card-product__price">0,99€</p>
               </div> 
             </div>
           </div>
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
-              <div class="card-product__img">
+              <!--<div class="card-product__img">
                 <img class="card-img" src="img/product/product8.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><button><i class="ti-search"></i></button></li>
                   <li><button><i class="ti-shopping-cart"></i></button></li>
                   <li><button><i class="ti-heart"></i></button></li>
                 </ul>
-              </div>
-              <div class="card-body">
+              </div>-->
+              <!--<div class="card-body">
                 <p>Kids Toy</p>
                 <h4 class="card-product__title"><a href="#">Charging Car</a></h4>
                 <p class="card-product__price">$150.00</p>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
@@ -311,9 +311,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Accessories</p>
-              <h4 class="card-product__title"><a href="single-product.html">Quartz Belt Watch</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Accesorio Deporte</p>
+              <h4 class="card-product__title"><a href="single-product.html">Smartwatch</a></h4>
+              <p class="card-product__price">16,99 €</p>
             </div>
           </div>
 
@@ -327,9 +327,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Beauty</p>
-              <h4 class="card-product__title"><a href="single-product.html">Women Freshwash</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Belleza y Salud</p>
+              <h4 class="card-product__title"><a href="single-product.html"> Colonia After Shave</a></h4> 
+              <p class="card-product__price">4,15€</p>
             </div>
           </div>
 
@@ -343,9 +343,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Decor</p>
-              <h4 class="card-product__title"><a href="single-product.html">Room Flash Light</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Bricolage</p>
+              <h4 class="card-product__title"><a href="single-product.html">Pegamento Extrafuerte</a></h4>
+              <p class="card-product__price">2,45€</p>
             </div>
           </div>
 
@@ -359,9 +359,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Decor</p>
-              <h4 class="card-product__title"><a href="single-product.html">Room Flash Light</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Alimentación</p>
+              <h4 class="card-product__title"><a href="single-product.html">Nocilla Cookies</a></h4>
+              <p class="card-product__price">2,99€</p>
             </div>
           </div>
 
@@ -375,9 +375,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Accessories</p>
-              <h4 class="card-product__title"><a href="single-product.html">Quartz Belt Watch</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Accesorio Deporte</p>
+              <h4 class="card-product__title"><a href="single-product.html">Smartwatch</a></h4>
+              <p class="card-product__price">16,99€</p>
             </div>
           </div>
 
@@ -391,9 +391,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Beauty</p>
-              <h4 class="card-product__title"><a href="single-product.html">Women Freshwash</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Belleza y Salud</p>
+              <h4 class="card-product__title"><a href="single-product.html">Colonia After Shave</a></h4>
+              <p class="card-product__price">4,15€</p>
             </div>
           </div>
 
@@ -407,9 +407,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Decor</p>
-              <h4 class="card-product__title"><a href="single-product.html">Room Flash Light</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Bricolage</p>
+              <h4 class="card-product__title"><a href="single-product.html">Pegamento Extrafuerte</a></h4>
+              <p class="card-product__price">2,45€</p>
             </div>
           </div>
 
@@ -423,9 +423,9 @@
               </ul>
             </div>
             <div class="card-body">
-              <p>Decor</p>
-              <h4 class="card-product__title"><a href="single-product.html">Room Flash Light</a></h4>
-              <p class="card-product__price">$150.00</p>
+              <p>Alimentación</p>
+              <h4 class="card-product__title"><a href="single-product.html">Nocilla Cookies</a></h4>
+              <p class="card-product__price">2,99€</p>
             </div>
           </div>
         </div>
