--- a/single-product.html
+++ b/single-product.html
@@ -113,23 +113,21 @@
 				</div>
 				<div class="col-lg-5 offset-lg-1">
 					<div class="s_product_text">
-						<h3>Faded SkyBlu Denim Jeans</h3>
-						<h2>$149.99</h2>
+						<h3>Smartwatch, 1.69 pulgadas Hombre Mujer con Monitor de Frecuencia Cardíaca</h3>
+						<h2>16,99</h2>
 						<ul class="list">
-							<li><a class="active" href="#"><span>Category</span> : Household</a></li>
-							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
+							<li><a class="active" href="#"><span>Categoría</span> : Deporte</a></li>
+							<li><a href="#"><span>Disponibilidad</span> : In Stock</a></li>
 						</ul>
-						<p>Mill Oil is an innovative oil filled radiator with the most modern technology. If you are looking for
-							something that can make your interior look awesome, and at the same time give you the pleasant warm feeling
-							during the winter.</p>
+						<p>1.69'' Pantalla Táctil Completa a Color TFT -Smartwatch Multifuncións: como pulsera de actividad (podómetro, calorías, distancia), oxígeno sanguíneo, entrenamiento respiratorio, pulsómetro, monitoreo del sueño, 12 modos de deporte, recordatorio sedentario, notificaciones de llamadas, mensajes SMS y APP, cronómetro, reloj despertador, controla la música, encontrar teléfono, pronóstico del tiempo, ajuste de brillo-12 Modos Deportivos y Función Impermeable IP68-24 Horas Monitor de Frecuencia Cardíaca y Sueño </p>
 						<div class="product_count">
-              <label for="qty">Quantity:</label>
+              <label for="qty">Cantidad:</label>
               <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
 							 class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
 							<input type="text" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-							<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+							<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) && sst > 0 ) result.value--;return false;"
                class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>
-							<a class="button primary-btn" href="#">Add to Cart</a>               
+							<a class="button primary-btn" href="#">Añadir al carrito</a>               
 						</div>
 						<div class="card_area d-flex align-items-center">
 							<a class="icon_btn" href="#"><i class="lnr lnr lnr-diamond"></i></a>
