feat:change2 the description the proyect

--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
           <img src="img/home/hero-slide1.png" alt="" class="img-fluid">
           <a href="#" class="hero-carousel__slideOverlay">
             <h3>Zapatillas de deporte Hombre Runnig</h3>
-            <p>Accessories Item</p>
+            <p>19,95€</p>
           </a>
         </div>
         <div class="hero-carousel__slide">
           <img src="img/home/hero-slide2.png" alt="" class="img-fluid">
           <a href="#" class="hero-carousel__slideOverlay">
             <h3>Ratón Gaming Profesional-Sensor óptico </h3>
-            <p>Accessories Item</p>
+            <p>5,50€ </p>
           </a>
         </div>
         <div class="hero-carousel__slide">
           <img src="img/home/hero-slide3.png" alt="" class="img-fluid">
           <a href="#" class="hero-carousel__slideOverlay">
             <h3>Paleta de Sombra de Ojos</h3>
-            <p>Accessories Item</p>
+            <p>5,50€</p>
           </a>
         </div>
       </div>
@@ -197,7 +197,7 @@
               </div>
               <div class="card-body">
                 <p>Alimentación</p>
-                <h4 class="card-product__title"><a href="single-product.html">Galletas Nocilla</a></h4>
+                <h4 class="card-product__title"><a href="single-product.html"> Nocilla Cookies</a></h4>
                 <p class="card-product__price">2,99€</p>
               </div>
             </div>
