--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mi Carrito</title>
+    <title>Solo48h - Mi Carrito</title>
     <link rel="icon" href="img/Fevicon.png" type="image/png" />
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" />
