feat: fix footer

--- a/register.html
+++ b/register.html
@@ -182,50 +182,65 @@
                 Architecto, expedita?
               </p>
             </div>
-            <div class="col-md-12 form-group">
-              <input type="text" class="form-control" id="confirmPassword" name="confirmPassword"
-                placeholder="Confirm Password" onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Confirm Password'">
+          </div>
+          <div class="offset-lg-1 col-lg-2 col-md-6 col-sm-6">
+            <div class="single-footer-widget tp_widgets">
+              <h4 class="footer_title">Links Rapidos</h4>
+              <ul class="list">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Tienda</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Producto</a></li>
+                <li><a href="#">Marca</a></li>
+                <li><a href="#">Contacto</a></li>
+              </ul>
             </div>
-            <div class="col-md-12 form-group">
-              <div class="creat_account">
-                <input type="checkbox" id="f-option2" name="selector">
-                <label for="f-option2">No cerrar mi cuenta</label>
+          </div>
+          <div class="col-lg-2 col-md-6 col-sm-6">
+            <div class="single-footer-widget instafeed">
+              <h4 class="footer_title">Galeria</h4>
+              <ul class="list instafeed d-flex flex-wrap">
+                <li><img src="img/gallery/r1.jpg" alt="" /></li>
+                <li><img src="img/gallery/r2.jpg" alt="" /></li>
+                <li><img src="img/gallery/r3.jpg" alt="" /></li>
+                <li><img src="img/gallery/r5.jpg" alt="" /></li>
+                <li><img src="img/gallery/r4.jpg" alt="" /></li>
+                <li><img src="img/gallery/r6.jpg" alt="" /></li>
+              </ul>
+            </div>
+          </div>
+          <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget tp_widgets">
+              <h4 class="footer_title">Contáctanos</h4>
+              <div class="ml-40">
+                <p class="sm-head">
+                  <span class="fa fa-location-arrow"></span>
+                  Oficina
+                </p>
+                <p>C/ del Perú, 52, 08018 Barcelona</p>
+
+                <p class="sm-head">
+                  <span class="fa fa-phone"></span>
+                  Teléfono
+                </p>
+                <p>
+                  +123 456 7890 <br />
+                  +123 456 7890
+                </p>
+
+                <p class="sm-head">
+                  <span class="fa fa-envelope"></span>
+                  Email
+                </p>
+                <p>
+                  free@solo48h.com <br />
+                  www.solo48h.shop.com
+                </p>
               </div>
             </div>
-            <div class="col-md-12 form-group">
-              <button type="submit" value="submit" class="button button-register w-100">Regístrate</button>
-            </div>
-            </form>
           </div>
         </div>
       </div>
-    </div>
-    </section>
-    <!--================End Login Box Area =================-->
-
-    <p class="sm-head">
-      <span class="fa fa-phone"></span>
-      Teléfono
-    </p>
-    <p>
-      +123 456 7890 <br />
-      +123 456 7890
-    </p>
-
-    <p class="sm-head">
-      <span class="fa fa-envelope"></span>
-      Email
-    </p>
-    <p>
-      free@solo48h.com <br />
-      www.solo48h.shop.com
-    </p>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
     </div>
 
     <div class="footer-bottom">
