--- a/single-product.html
+++ b/single-product.html
@@ -696,6 +696,7 @@
               <h4 class="footer_title">Galeria</h4>
               <ul class="list instafeed d-flex flex-wrap">
                 <li><img src="img/gallery/r1.jpg" alt="" /></li>
+                <li><img src="img/gallery/r2.jpg" alt="" /></li>
                 <li><img src="img/gallery/r3.jpg" alt="" /></li>
                 <li><img src="img/gallery/r5.jpg" alt="" /></li>
                 <li><img src="img/gallery/r4.jpg" alt="" /></li>
