--- a/category.html
+++ b/category.html
@@ -278,7 +278,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product1.png" alt="" />
+                    <img class="card-img" src="img/product/product1.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -292,18 +292,18 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Accessories</p>
+                    <p>Accesorio Deporte</p>
                     <h4 class="card-product__title">
-                      <a href="#">Quartz Belt Watch</a>
+                      <a href="#">Smartwatch</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">16,99€</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product2.png" alt="" />
+                    <img class="card-img" src="img/product/product2.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -328,7 +328,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product3.png" alt="" />
+                    <img class="card-img" src="img/product/product3.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -353,7 +353,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product4.png" alt="" />
+                    <img class="card-img" src="img/product/product4.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -378,7 +378,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product5.png" alt="" />
+                    <img class="card-img" src="img/product/product5.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -403,7 +403,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product6.png" alt="" />
+                    <img class="card-img" src="img/product/product6.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -428,7 +428,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product7.png" alt="" />
+                    <img class="card-img" src="img/product/product7.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -453,7 +453,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product8.png" alt="" />
+                    <img class="card-img" src="img/product/product8.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -478,7 +478,7 @@
               <div class="col-md-6 col-lg-4">
                 <div class="card text-center card-product">
                   <div class="card-product__img">
-                    <img class="card-img" src="img/product/product1.png" alt="" />
+                    <img class="card-img" src="img/product/product9.jpg" alt="" />
                     <ul class="card-product__imgOverlay">
                       <li>
                         <button><i class="ti-search"></i></button>
@@ -520,47 +520,21 @@
         <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
           <div class="single-search-product-wrapper">
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-1.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-1.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-2.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-2.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-3.png" alt="" /></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
-          <div class="single-search-product-wrapper">
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-4.png" alt="" /></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-5.png" alt="" /></a>
-              <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
-              </div>
-            </div>
-            <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-6.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-3.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
@@ -572,21 +546,21 @@
         <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
           <div class="single-search-product-wrapper">
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-7.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-4.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-8.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-5.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-9.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-6.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
@@ -598,21 +572,47 @@
         <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
           <div class="single-search-product-wrapper">
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-1.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-7.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-2.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-8.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
-              <a href="#"><img src="img/product/product-sm-3.png" alt="" /></a>
+              <a href="#"><img src="img/product/product-sm-9.jpg" alt="" /></a>
+              <div class="desc">
+                <a href="#" class="title">Gray Coffee Cup</a>
+                <div class="price">$170.00</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
+          <div class="single-search-product-wrapper">
+            <div class="single-search-product d-flex">
+              <a href="#"><img src="img/product/product-sm-10.jpg" alt="" /></a>
+              <div class="desc">
+                <a href="#" class="title">Gray Coffee Cup</a>
+                <div class="price">$170.00</div>
+              </div>
+            </div>
+            <div class="single-search-product d-flex">
+              <a href="#"><img src="img/product/product-sm-11.jpg" alt="" /></a>
+              <div class="desc">
+                <a href="#" class="title">Gray Coffee Cup</a>
+                <div class="price">$170.00</div>
+              </div>
+            </div>
+            <div class="single-search-product d-flex">
+              <a href="#"><img src="img/product/product-sm-12.jpg" alt="" /></a>
               <div class="desc">
                 <a href="#" class="title">Gray Coffee Cup</a>
                 <div class="price">$170.00</div>
